test formatter